@@ -1,14 +1,12 @@
 package main.service;
 
-import main.database.entity.EBook;
 import main.database.entity.global.*;
-import main.database.entity.source.EBookFirst;
-import main.database.entity.source.EBookSecond;
-import main.database.entity.source.EBookThird;
 import main.database.repository.source.FirstRepository;
 import main.database.repository.global.GBookRepository;
 import main.database.repository.source.SecondRepository;
 import main.database.repository.source.ThirdRepository;
+import main.util.BookConverterUtil;
+import main.util.MergeHelperUtil;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,8 +14,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 
 @Service
@@ -26,77 +22,47 @@ public class GBookDuplicateService {
     private final FirstRepository firstRepo;
     private final SecondRepository secondRepo;
     private final ThirdRepository thirdRepo;
-    private final GAuthorService authorService;
-    private final GGenreService genreService;
-    private final GCharacterService characterService;
     private final GBookService bookService;
-    private final GPlaceService placeService;
     private static final Logger LOG = LogManager.getFormatterLogger("GBookDuplicateService");
 
     @Autowired
-    public GBookDuplicateService(FirstRepository firstRepo, SecondRepository secondRepo, ThirdRepository thirdRepo,
-                                 GBookRepository bookRepo, GAuthorService authorService,
-                                 GGenreService genreService, GCharacterService characterService,
-                                 GBookService bookService, GPlaceService placeService) {
+    public GBookDuplicateService(
+            FirstRepository firstRepo,
+            SecondRepository secondRepo, ThirdRepository thirdRepo,
+            GBookRepository bookRepo, GBookService bookService
+    ) {
         this.firstRepo = firstRepo;
         this.secondRepo = secondRepo;
         this.thirdRepo = thirdRepo;
         this.bookRepo = bookRepo;
-        this.authorService = authorService;
-        this.genreService = genreService;
-        this.characterService = characterService;
         this.bookService = bookService;
-        this.placeService = placeService;
     }
 
     @Transactional
     public void setUpGlobalSchema() {
-//        List<EGlobalBook> firstSource =
-//                StreamSupport.stream(firstRepo.findAll().spliterator(), false)
-//                        .map(this::firstBookToEGlobalBook)
-//                        .collect(Collectors.toList()
-//                        );
-        List<EBookFirst> firstSource = firstRepo.findAll();
-        for (EBookFirst book : firstSource) {
-            insertBook(firstBookToEGlobalBook(book));
-        }
-        LOG.info("finished inserting first source");
-        List<EBookSecond> secondSource = secondRepo.findAll();
-        for (EBookSecond book : secondSource) {
-            insertBook(secondBookToEGlobalBook(book));
-        }
-        LOG.info("finished inserting second source");
-        List<EBookThird> thirdSource = thirdRepo.findAll();
-        for (EBookThird book : thirdSource) {
-            insertBook(thirdBookToEGlobalBook(book));
-        }
-        LOG.info("finished inserting third source");
-//        List<EGlobalBook> secondSource =
-//                StreamSupport.stream(secondRepo.findAll().spliterator(), false)
-//                        .map(this::secondBookToEGlobalBook)
-//                        .collect(Collectors.toList()
-//                        );
-//        List<EGlobalBook> thirdSource =
-//                StreamSupport.stream(thirdRepo.findAll().spliterator(), false)
-//                        .map(this::thirdBookToEGlobalBook)
-//                        .collect(Collectors.toList()
-//                        );
+        List<EGlobalBook> firstSource =
+                firstRepo.findAll().stream()
+                        .map(BookConverterUtil::firstBookToEGlobalBook).toList();
+        List<EGlobalBook> secondSource =
+                secondRepo.findAll().stream()
+                        .map(BookConverterUtil::secondBookToEGlobalBook).toList();
+        List<EGlobalBook> thirdSource =
+                thirdRepo.findAll().stream()
+                        .map(BookConverterUtil::thirdBookToEGlobalBook).toList();
 
-//        insertSource(firstSource);
-//        LOG.info("finished inserting first source");
-//        insertSource(secondSource);
-//        LOG.info("finished inserting second source");
-//        insertSource(thirdSource);
-//        LOG.info("finished inserting third source");
-
-        mergeBookDuplicates();
+        ArrayList<EGlobalBook> allBooks = new ArrayList<>();
+        allBooks.addAll(firstSource);
+        allBooks.addAll(secondSource);
+        allBooks.addAll(thirdSource);
+        List<EGlobalBook> uniqueBooks = mergeBookDuplicates(allBooks);
+        for (EGlobalBook book : uniqueBooks) {
+            //this method removes duplicates from inside lists of characters authors places and genres
+            mergeDuplicatesInBook(book);
+        }
+        bookRepo.saveAll(uniqueBooks);
         LOG.info("finished merging duplicates");
-        cleanEmptyBooks();
 
-        mergeAuthorDuplicates();
-        mergeCharacterDuplicates();
-        mergeGenreDuplicates();
-        mergePlaceDuplicates();
+        cleanEmptyBooks();
         System.out.println("done");
         LOG.info("DONE");
 
@@ -107,23 +73,39 @@ public class GBookDuplicateService {
         bookRepo.deleteAllByTitle(null);
     }
 
-    public void mergeBookDuplicates() {
+    public List<EGlobalBook> mergeBookDuplicates(List<EGlobalBook> allBooks) {
         // keys by title, original title, title+subtitle, original title + subtitle
         // values by book id
         //merge ones with the same key
-        List<EGlobalBook> allBooks = (List<EGlobalBook>) bookRepo.findAll();
         Map<String, EGlobalBook> allBookKeys = new HashMap<>();
+        ArrayList<EGlobalBook> bookListCopy = new ArrayList<>(allBooks);
+        int counter = allBooks.size();
         for (EGlobalBook book : allBooks) {
+            counter--;
             List<String> keys = constructKeys(book);
             for (String key : keys) {
+                if (isNullOrEmpty(book.getTitle())) {
+                    bookListCopy.remove(book);
+                    continue;
+                }
+                if (isNullOrEmpty(key)) {
+                    continue;
+                }
                 if (allBookKeys.containsKey(key)) {
-                    LOG.info("merging key" + key.toString() + "\n" + allBookKeys.get(key) + "\n" + book.toString() + "\n");
-                    mergeBooks(allBookKeys.get(key), book);
+                    EGlobalBook keyBook = allBookKeys.get(key);
+                    LOG.info("merging key" + key + "\n" + allBookKeys.get(key) + "\n" + book.toString() + "\n");
+                    if (bookListCopy.contains(keyBook)) {
+                        mergeBooksAlt(keyBook, book);
+                    }
+                    bookListCopy.remove(book);
                 } else {
-                    allBookKeys.put(key, book);
+                    if (bookListCopy.contains(book))
+                        allBookKeys.put(key, book);
                 }
             }
+
         }
+        return bookListCopy;
     }
 
     private List<String> constructKeys(EGlobalBook book) {
@@ -132,7 +114,10 @@ public class GBookDuplicateService {
         keys.add(stringToKey(book.getOriginalTitle() == null ? "" : book.getOriginalTitle()));
         keys.add(stringToKey(book.getTitle() == null ? "" : book.getTitle() + (book.getSubtitle() == null ? "" : book.getSubtitle())));
         keys.add(stringToKey(book.getOriginalTitle() == null ? "" : book.getOriginalTitle() + (book.getSubtitle() == null ? "" : book.getSubtitle())));
+        keys.add(book.getIsbn10());
+        keys.add(book.getIsbn13());
         keys.remove("");
+        keys.remove(null);
         return keys.stream().toList();
     }
 
@@ -143,243 +128,163 @@ public class GBookDuplicateService {
         return line.toUpperCase().replaceAll("[^QWRTPSDFGHJKLZXCVBNM0-9]", "");
     }
 
-    public void mergeAuthorDuplicates() {
+    public void mergeDuplicatesInBook(EGlobalBook book) {
+        mergeAuthorDuplicates(book);
+        mergeCharacterDuplicates(book);
+        mergeGenreDuplicates(book);
+        mergePlaceDuplicates(book);
+    }
+
+    public void mergeAuthorDuplicates(EGlobalBook book) {
         System.out.println("Merging authors");
-        List<EGlobalAuthor> allAuthors = authorService.findAll();
         // check all author combinations here?
+        List<String> allAuthors = new ArrayList<>(book.getAuthors());
         int l = allAuthors.size();
-        for (int i = 0; i < l; i++){
+        for (int i = 0; i < l; i++) {
             var keep = allAuthors.get(i);
-            for (int j = i+1; j<l; j++){
+            for (int j = i + 1; j < l; j++) {
                 var discard = allAuthors.get(j);
-                if (!keep.equals(discard)){
-                    authorService.mergeAuthors(keep, discard);
+                if (book.getAuthors().contains(keep) && isPersonDuplicate(keep, discard)) {
+                    book.getAuthors().remove(discard);
                 }
             }
         }
     }
 
-    public void mergeCharacterDuplicates() {
+    public void mergeCharacterDuplicates(EGlobalBook book) {
         System.out.println("Merging characters");
-        List<EGlobalCharacter> allCharacters = characterService.findAll();
-        // check all author combinations here?
+        List<String> allCharacters = new ArrayList<>(book.getCharacters());
         int l = allCharacters.size();
-        for (int i = 0; i < l; i++){
+        for (int i = 0; i < l; i++) {
             var keep = allCharacters.get(i);
-            for (int j = i+1; j<l; j++){
+            for (int j = i + 1; j < l; j++) {
                 var discard = allCharacters.get(j);
-                if (!keep.equals(discard)){
-                    characterService.mergeCharacters(keep, discard);
+                if (book.getCharacters().contains(keep) && isPersonDuplicate(keep, discard)) {
+                    book.getCharacters().remove(discard);
                 }
             }
         }
     }
 
-    public void mergeGenreDuplicates() {
+    public void mergeGenreDuplicates(EGlobalBook book) {
         System.out.println("Merging genres");
-        List<EGlobalGenre> allGenres = genreService.findAll();
+        List<String> allGenres = new ArrayList<>(book.getGenres());
         // check all author combinations here?
         int l = allGenres.size();
-        for (int i = 0; i < l; i++){
+        for (int i = 0; i < l; i++) {
             var keep = allGenres.get(i);
-            for (int j = i+1; j<l; j++){
+            for (int j = i + 1; j < l; j++) {
                 var discard = allGenres.get(j);
-                if (!keep.equals(discard)){
-                    genreService.mergeGenres(keep, discard);
+                if (book.getGenres().contains(keep) && isExactDuplicate(keep, discard)) {
+                    book.getGenres().remove(discard);
                 }
             }
         }
     }
 
-    public void mergePlaceDuplicates() {
-        System.out.println("Merging places");
-        List<EGlobalPlace> allPlaces = placeService.findAll();
+    public void mergePlaceDuplicates(EGlobalBook book) {
+        System.out.println("Merging genres");
+        List<String> allPlaces = new ArrayList<>(book.getPlaces());
         // check all author combinations here?
         int l = allPlaces.size();
-        for (int i = 0; i < l; i++){
+        for (int i = 0; i < l; i++) {
             var keep = allPlaces.get(i);
-            for (int j = i+1; j<l; j++){
+            for (int j = i + 1; j < l; j++) {
                 var discard = allPlaces.get(j);
-                if (!keep.equals(discard)){
-                    placeService.mergePlaces(keep, discard);
+                if (book.getPlaces().contains(keep) && isExactDuplicate(keep, discard)) {
+                    book.getPlaces().remove(discard);
                 }
             }
         }
     }
 
-    public void insertBook(EGlobalBook book) {
-        Optional<EGlobalBook> globalBook13 = bookService.findByIsbn13(book.getIsbn13());
-        Optional<EGlobalBook> globalBook10 = bookService.findByIsbn10(book.getIsbn13());
-        if (!globalBook13.isPresent() && !globalBook10.isPresent()) {
-            bookRepo.save(book);
-        } else if (!globalBook13.isPresent()) {
-            LOG.info("merging by isbn10\n" + globalBook10.get().toString() + "\n" + book.toString() + "\n");
-            mergeBooks(globalBook10.get(), book);
-        } else if (!globalBook10.isPresent()) {
-            LOG.info("merging by isbn13\n" + globalBook13.get().toString() + "\n" + book.toString() + "\n");
-            mergeBooks(globalBook13.get(), book);
-        } else {
-            LOG.info("merging by isbn13\n" + globalBook13.get().toString() + "\n" + book.toString());
-            mergeBooks(globalBook13.get(), book);
-            LOG.info("merging by isbn10\n" + globalBook13.get().toString() + "\n" + globalBook13.get().toString() + "\n");
-            mergeBooks(globalBook13.get(), globalBook10.get());
-        }
+    public boolean isPersonDuplicate(String person1, String person2) {
+        String[] names1 = person1.toLowerCase().split(" ");
+        String[] names2 = person2.toLowerCase().split(" ");
+        int minMatches = Math.min(Math.min(names1.length, names2.length), 2); // at least 2 matching name parts or one if only one name given
 
+        int matches = MergeHelperUtil.getPersonNameMatchesCount(names1, names2);
+
+        return matches >= minMatches;
     }
 
-    //merges copy into the original
-    private void mergeBooks(EGlobalBook original, EGlobalBook copy) {
-        if (isNullOrEmpty(copy.getIsbn13())) original.setIsbn13(copy.getIsbn13());
-        if (isNullOrEmpty(copy.getIsbn10())) original.setIsbn10(copy.getIsbn10());
-        if (copy.getEuroPrice() == null) original.setEuroPrice(copy.getEuroPrice());
-        if (copy.getEuroDiscount() == null) original.setEuroDiscount(copy.getEuroDiscount());
-        if (isNullOrEmpty(copy.getType())) original.setType(copy.getType());
-        if (isNullOrEmpty(copy.getLinkBookPage())) original.setLinkBookPage(copy.getLinkBookPage());
-        if (isNullOrEmpty(copy.getTitle())) original.setTitle(copy.getTitle());
-        if (isNullOrEmpty(copy.getSubtitle())) original.setSubtitle(copy.getSubtitle());
-        if (isNullOrEmpty(copy.getPublisher())) original.setPublisher(copy.getPublisher());
-        if (isNullOrEmpty(copy.getPublishedCountry())) original.setPublishedCountry(copy.getPublishedCountry());
-        if (isNullOrEmpty(copy.getLanguage())) original.setLanguage(copy.getLanguage());
-        if (copy.getHeight() == null) original.setHeight(copy.getHeight());
-        if (copy.getWidth() == null) original.setWidth(copy.getWidth());
-        if (copy.getSpine() == null) original.setSpine(copy.getSpine());
-        if (copy.getWeight() == null) original.setWeight(copy.getWeight());
-        if (isNullOrEmpty(copy.getShortDescription())) original.setShortDescription(copy.getShortDescription());
-        if (isNullOrEmpty(copy.getLongDescription())) original.setLongDescription(copy.getLongDescription());
-        if (isNullOrEmpty(copy.getReview())) original.setReview(copy.getReview());
-        if (copy.getPublication_date() == null) original.setPublication_date(copy.getPublication_date());
-        if (isNullOrEmpty(copy.getOriginalTitle())) original.setOriginalTitle(copy.getOriginalTitle());
-        if (copy.getAverageRating() == null) original.setAverageRating(copy.getAverageRating());
-        if (isNullOrEmpty(copy.getImageUrl())) original.setImageUrl(copy.getImageUrl());
-        if (isNullOrEmpty(copy.getSmallImageUrl())) original.setSmallImageUrl(copy.getSmallImageUrl());
-        if (isNullOrEmpty(original.getSeries())) {
+
+    public boolean isExactDuplicate(String genre1, String genre2) {
+        String[] names1 = genre1.toLowerCase().split(" ");
+        String[] names2 = genre2.toLowerCase().split(" ");
+
+        int minMatches = Math.min(names1.length, names2.length);
+
+        int matches = MergeHelperUtil.getExactMatchesCount(names1, names2);
+
+        return matches >= minMatches;
+    }
+
+
+    private void mergeBooksAlt(EGlobalBook original, EGlobalBook copy) {
+        if (!isNullOrEmpty(copy.getIsbn13()) && isNullOrEmpty(original.getIsbn13()))
+            original.setIsbn13(copy.getIsbn13());
+        if (!isNullOrEmpty(copy.getIsbn10()) && isNullOrEmpty(original.getIsbn10()))
+            original.setIsbn10(copy.getIsbn10());
+        if (!isNullOrEmpty(copy.getEuroPrice()) && isNullOrEmpty(original.getEuroPrice()))
+            original.setEuroPrice(copy.getEuroPrice());
+        if (!isNullOrEmpty(copy.getEuroDiscount()) && isNullOrEmpty(original.getEuroDiscount()))
+            original.setEuroDiscount(copy.getEuroDiscount());
+        if (!isNullOrEmpty(copy.getType()) && isNullOrEmpty(original.getType())) original.setType(copy.getType());
+        if (!isNullOrEmpty(copy.getLinkBookPage()) && isNullOrEmpty(original.getLinkBookPage()))
+            original.setLinkBookPage(copy.getLinkBookPage());
+        if (!isNullOrEmpty(copy.getTitle()) && isNullOrEmpty(original.getTitle())) original.setTitle(copy.getTitle());
+        if (!isNullOrEmpty(copy.getSubtitle()) && isNullOrEmpty(original.getSubtitle()))
+            original.setSubtitle(copy.getSubtitle());
+        if (!isNullOrEmpty(copy.getPublisher()) && isNullOrEmpty(original.getPublisher()))
+            original.setPublisher(copy.getPublisher());
+        if (!isNullOrEmpty(copy.getPublishedCountry()) && isNullOrEmpty(original.getPublishedCountry()))
+            original.setPublishedCountry(copy.getPublishedCountry());
+        if (!isNullOrEmpty(copy.getLanguage()) && isNullOrEmpty(original.getLanguage()))
+            original.setLanguage(copy.getLanguage());
+        if (!isNullOrEmpty(copy.getHeight()) && isNullOrEmpty(original.getHeight()))
+            original.setHeight(copy.getHeight());
+        if (!isNullOrEmpty(copy.getWidth()) && isNullOrEmpty(original.getWidth())) original.setWidth(copy.getWidth());
+        if (!isNullOrEmpty(copy.getSpine()) && isNullOrEmpty(original.getSpine())) original.setSpine(copy.getSpine());
+        if (!isNullOrEmpty(copy.getWeight()) && isNullOrEmpty(original.getWeight()))
+            original.setWeight(copy.getWeight());
+        if (!isNullOrEmpty(copy.getShortDescription()) && isNullOrEmpty(original.getShortDescription()))
+            original.setShortDescription(copy.getShortDescription());
+        if (!isNullOrEmpty(copy.getLongDescription()) && isNullOrEmpty(original.getLongDescription()))
+            original.setLongDescription(copy.getLongDescription());
+        if (!isNullOrEmpty(copy.getReview()) && isNullOrEmpty(original.getReview()))
+            original.setReview(copy.getReview());
+        if (!isNullOrEmpty(copy.getPublication_date()) && isNullOrEmpty(original.getPublication_date()))
+            original.setPublication_date(copy.getPublication_date());
+        if (!isNullOrEmpty(copy.getOriginalTitle()) && isNullOrEmpty(original.getOriginalTitle()))
+            original.setOriginalTitle(copy.getOriginalTitle());
+        if (!isNullOrEmpty(copy.getAverageRating()) && isNullOrEmpty(original.getAverageRating()))
+            original.setAverageRating(copy.getAverageRating());
+        if (!isNullOrEmpty(copy.getImageUrl()) && isNullOrEmpty(original.getImageUrl()))
+            original.setImageUrl(copy.getImageUrl());
+        if (!isNullOrEmpty(copy.getSmallImageUrl()) && isNullOrEmpty(original.getSmallImageUrl()))
+            original.setSmallImageUrl(copy.getSmallImageUrl());
+        if (!isNullOrEmpty(original.getSeries()) && isNullOrEmpty(original.getSeries())) {
             original.setSeries(copy.getSeries());
         }
-        try {
-            bookRepo.save(original);
-            bookRepo.delete(copy);
-            for (EGlobalPlace place : copy.getPlaces()) {
-                bookService.addPlace(original, place);
-            }
-            for (EGlobalAuthor author : copy.getAuthors()) {
-                bookService.addAuthor(original, author);
-            }
-            for (EGlobalGenre genre : original.getGenres()) {
-                bookService.addGenre(original, genre);
-            }
-            for (EGlobalCharacter character : original.getCharacters()) {
-                bookService.addCharacter(original, character);
-            }
-        } catch (Exception e) {
+        HashSet<String> places = new HashSet<>(original.getPlaces());
+        places.addAll(copy.getPlaces());
+        original.setPlaces(new ArrayList<>(places));
 
-        }
+        HashSet<String> characters = new HashSet<>(original.getCharacters());
+        characters.addAll(copy.getCharacters());
+        original.setCharacters(new ArrayList<>(characters));
+
+        HashSet<String> authors = new HashSet<>(original.getAuthors());
+        authors.addAll(copy.getAuthors());
+        original.setAuthors(new ArrayList<>(authors));
+
+        HashSet<String> genres = new HashSet<>(original.getGenres());
+        genres.addAll(copy.getGenres());
+        original.setGenres(new ArrayList<>(genres));
     }
-
 
     private boolean isNullOrEmpty(String string) {
         return string == null || string.isEmpty();
     }
-
-    public EGlobalBook firstBookToEGlobalBook(EBookFirst firstBook) {
-        ArrayList<EGlobalAuthor> authorSet = new ArrayList<>();
-
-        String authorList = firstBook.getAuthor();
-
-        // filter out role inside of parathesese
-        String[] authors = authorList.split(",");
-        for (String author : authors) {
-            if (author.contains("(") && author.contains(")")) {
-                int indexOpen = author.indexOf("(");
-
-                author = author.substring(0, indexOpen);
-            }
-            author = author.trim();
-
-            authorSet.add(authorService.saveAuthor(author));
-        }
-
-        return new EGlobalBook(firstBook.getIsbn(), null, null, firstBook.getEuro_price(), firstBook.getDiscount_euro(),
-                firstBook.getType(), firstBook.getLinkBookPage(), firstBook.getName(),
-                firstBook.getSubtitle(), null, firstBook.getEdition(), firstBook.getPublisher(),
-                firstBook.getPublished_country(), firstBook.getLanguage(), null, firstBook.getHeight(),
-                firstBook.getWidth(), firstBook.getSpine(), firstBook.getWeight(), firstBook.getShortBlurb(),
-                firstBook.getLongBlurb(),
-                firstBook.getBlurbReview(), null, null, null, null, null, new ArrayList<>(),
-                new ArrayList<>(), new ArrayList<>(), authorSet, "blackwell");
-    }
-
-    public EGlobalBook secondBookToEGlobalBook(EBookSecond secondBook) {
-        ArrayList<EGlobalAuthor> authorSet = new ArrayList<>();
-
-        String authorList = secondBook.getAuthors();
-        String authors[] = authorList.split(",");
-
-        for (String author : authors) {
-            authorSet.add(authorService.saveAuthor(author.trim()));
-        }
-
-        return new EGlobalBook(secondBook.getIsbn13(), secondBook.getIsbn(), secondBook.getOriginalPublicationYear(), null,
-                null, null, null, secondBook.getTitle(),
-                null, secondBook.getOriginalTitle(), null,
-                null, null, null, null,
-                null, null, null, null,
-                null, null, null,
-                secondBook.getAverageRating(), secondBook.getImageUrl(), secondBook.getSmallImageUrl(), null,
-                null, new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), authorSet, "source2");
-    }
-
-    public EGlobalBook thirdBookToEGlobalBook(EBookThird thirdBook) {
-        // Save author list
-        ArrayList<EGlobalAuthor> authorSet = new ArrayList<EGlobalAuthor>();
-        String authorList = thirdBook.getAuthor();
-        String authors[] = authorList.split(",");
-
-        for (String author : authors) {
-            authorSet.add(authorService.saveAuthor(author.trim()));
-        }
-
-        // Save genre list
-        ArrayList<EGlobalGenre> genreSet = new ArrayList<>();
-        String genreList = thirdBook.getAuthor();
-        String genres[] = genreList.split(",");
-
-        for (String genre : genres) {
-            genreSet.add(genreService.saveGenre(genre.trim()));
-        }
-
-        // Save character list
-        ArrayList<EGlobalCharacter> characterSet = new ArrayList<>();
-        String characterList = thirdBook.getAuthor();
-        String[] characters = characterList.split(",");
-
-        for (String character : characters) {
-            characterSet.add(characterService.saveCharacter(character.trim()));
-        }
-
-        ArrayList<EGlobalPlace> placeSet = new ArrayList<>();
-        String placeList = thirdBook.getPlaces();
-        String[] places = placeList.split(",");
-        for (String place : places) {
-            placeSet.add(placeService.savePlace(place.trim()));
-        }
-
-        // last 4 characters of the string are year
-        String date = thirdBook.getFirstPublishDate();
-        int year = -1;
-        try {
-            year = Integer.parseInt(date.substring(date.length() - 4));
-        } catch (Exception e) {
-            // TODO parser for dates like "Sep-96" "Mar-01"
-        }
-
-        return new EGlobalBook(thirdBook.getIsbn13(), thirdBook.getIsbn(), "" + year, null,
-                null, null, null, thirdBook.getTitle(),
-                null, null, null,
-                null, null, thirdBook.getLanguage(), null,
-                null, null, null, null,
-                null, thirdBook.getDescription(), null,
-                thirdBook.getAvgRating(), null, null, thirdBook.getSeries(),
-                thirdBook.getAwards(), new ArrayList<>(), characterSet, genreSet, authorSet, "source3");
-    }
-
 }
